--- a/ODK.Web.Razor/Views/Shared/Groups/Home/_GroupInfo.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/Home/_GroupInfo.cshtml
@@ -1,20 +1,32 @@
 ﻿@using ODK.Core.Utils
 @using ODK.Services.Chapters.ViewModels
+@using ODK.Web.Common.Routes
 @model GroupHomePageViewModel
 
-<div class="d-flex flex-column gap-1 justify-content-end">
-    @if (Model.ChapterLocation != null)
+<div class="d-flex flex-column gap-3">
+    @if (Model.HasImage)
     {
-        <div class="d-flex justify-content-end">
-            @await Html.PartialAsync("Components/_Location", Model.ChapterLocation.Name)
+        <div>
+            <img src="@OdkRoutes.Groups.Image(Model.Chapter.Id)" />
         </div>
-    }
+    }    
 
-    <div class="d-flex justify-content-end">
-        Going since @Model.Chapter.CreatedUtc.ToFriendlyDateString(Model.TimeZone)
-    </div>
-    <div class="d-flex justify-content-end align-items-center gap-2">
-        @await Html.PartialAsync("Components/Icons/_Members")
-        @Model.MemberCount @StringUtils.Pluralise(Model.MemberCount, "member")
+    <div class="flex-grow-1">
+        <div class="d-flex flex-column gap-1 justify-content-end">
+            @if (Model.ChapterLocation != null)
+            {
+                <div class="d-flex justify-content-end text-end">
+                    @await Html.PartialAsync("Components/_Location", Model.ChapterLocation.Name)
+                </div>
+            }
+
+            <div class="d-flex justify-content-end text-end">
+                Going since @Model.Chapter.CreatedUtc.ToFriendlyDateString(Model.TimeZone)
+            </div>
+            <div class="d-flex justify-content-end text-end align-items-center gap-2">
+                @await Html.PartialAsync("Components/Icons/_Members")
+                @Model.MemberCount @StringUtils.Pluralise(Model.MemberCount, "member")
+            </div>
+        </div>
     </div>
 </div>
