--- a/ODK.Web.Razor/wwwroot/css/_themes.scss
+++ b/ODK.Web.Razor/wwwroot/css/_themes.scss
@@ -1,13 +1,9 @@
-.chapter-theme--dublin {
-    --bg-section-header: #23DA40;
-    --color-section-header: #000;
+@import "odk/_themes";
+
+.bg-level-1 {
+    background-color: var(--odk-bg-level-1);
 }
 
-.chapter-theme--manchester {
-    --bg-section-header: #F3D402;
-    --color-section-header: #000;
-}
-
-.chapter-theme--oxford {
-    --bg-section-header: #e03034;
+.bg-level-2 {
+    background-color: var(--odk-bg-level-2);
 }
