--- a/ODK.Web.Razor/Pages/Pricing.cshtml
+++ b/ODK.Web.Razor/Pages/Pricing.cshtml
@@ -6,6 +6,7 @@
 @{
     Layout = "_HomeLayout";
     Model.Title = "Pricing";
+    Model.Path = "/pricing";
 
     var dto = await SiteSubscriptionService.GetSiteSubscriptionsDto(Model.CurrentMemberIdOrDefault);
 }
