--- a/ODK.Web.Razor/wwwroot/css/main.css
+++ b/ODK.Web.Razor/wwwroot/css/main.css
@@ -11941,6 +11941,10 @@ html[data-platform=odk] {
     font-size: var(--odk-body-font-size-lg);
   }
 }
+p:last-child {
+  margin-bottom: 0;
+}
+
 .small {
   font-size: 0.875em !important;
 }
