--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsContent.cshtml
@@ -7,26 +7,30 @@
 @using ODK.Services.Events
 @using ODK.Services.Events.ViewModels
 @using ODK.Web.Common.Extensions
+@using ODK.Web.Razor.Models.Admin
 @using ODK.Web.Razor.Models.Admin.Chapters
 @using ODK.Web.Razor.Models.Admin.Events
 @model EventSettingsAdminPageViewModel
 
-<h2>Event settings</h2>
-
-<section class="section">
-    <form action="/groups/@Model.Chapter.Id/events/settings" method="post">
-        @Html.AntiForgeryToken()
-        @await Html.PartialAsync("Admin/Events/_SettingsForm", new EventSettingsFormViewModel
-        {
-            DefaultDayOfWeek = Model.Settings?.DefaultDayOfWeek,
-            DefaultDescription = Model.Settings?.DefaultDescription,
-            DefaultEndTime = TimeSpanUtils.ToString(Model.Settings?.DefaultEndTime),
-            DefaultScheduledEmailDayOfWeek = Model.Settings?.DefaultScheduledEmailDayOfWeek,
-            DefaultScheduledEmailTimeOfDay = TimeSpanUtils.ToString(Model.Settings?.DefaultScheduledEmailTimeOfDay),
-            DefaultStartTime = TimeSpanUtils.ToString(Model.Settings?.DefaultStartTime),
-            DisableComments = Model.Settings?.DisableComments ?? false,
-            OwnerSubscription = Model.OwnerSubscription
-        })
-        <button class="btn btn-primary">Update</button>
-    </form>
-</section>
+@await Html.PartialAsync("Admin/_AdminBody", new AdminBodyViewModel
+{
+    Title = "Event settings",
+    ContentFunc = 
+        @<div>
+            <form action="/groups/@Model.Chapter.Id/events/settings" method="post">
+                @Html.AntiForgeryToken()
+                @await Html.PartialAsync("Admin/Events/_SettingsForm", new EventSettingsFormViewModel
+                {
+                    DefaultDayOfWeek = Model.Settings?.DefaultDayOfWeek,
+                    DefaultDescription = Model.Settings?.DefaultDescription,
+                    DefaultEndTime = TimeSpanUtils.ToString(Model.Settings?.DefaultEndTime),
+                    DefaultScheduledEmailDayOfWeek = Model.Settings?.DefaultScheduledEmailDayOfWeek,
+                    DefaultScheduledEmailTimeOfDay = TimeSpanUtils.ToString(Model.Settings?.DefaultScheduledEmailTimeOfDay),
+                    DefaultStartTime = TimeSpanUtils.ToString(Model.Settings?.DefaultStartTime),
+                    DisableComments = Model.Settings?.DisableComments ?? false,
+                    OwnerSubscription = Model.OwnerSubscription
+                })
+                <button class="btn btn-primary">Update</button>
+            </form>
+        </div>
+})
