--- a/ODK.Web.Razor/Pages/TestException.cshtml
+++ b/ODK.Web.Razor/Pages/TestException.cshtml
@@ -1,6 +1,6 @@
-﻿@page "/TestException"
+﻿@page "/Test"
 @model ODK.Web.Razor.Pages.TestExceptionModel
 @{
-    Layout = "_Layout";
-    throw new Exception("Test exception");
+    Layout = null;
 }
+
