--- a/ODK.Web.Razor/wwwroot/css/_slim-select.scss
+++ b/ODK.Web.Razor/wwwroot/css/_slim-select.scss
@@ -1,5 +1,7 @@
 ﻿/*Style SlimSelect like Bootstrap 5*/
 .ss-main {    
+    --ss-border-radius: 0;
+
     // for positioning the deselect icon
     display: flex;
 
@@ -11,6 +13,12 @@
 .ss-placeholder {
     padding: 0 !important;
     line-height: 1.5 !important;
+}
+
+.placeholder-hidden {
+    .ss-placeholder {
+        visibility: hidden;
+    }
 }
 
 .ss-content {
