--- a/ODK.Web.Razor/Views/Shared/Components/_Body.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Body.cshtml
@@ -14,35 +14,40 @@
         Title = Model.Title
     })
 
-    @if (Model.Menu != null)
-    {
-        @Model.Menu
-    }
-
-    <div class="container page-alerts">
-        @if (!Model.HideSubscriptionAlert)
-        {
-            @await Html.PartialAsync("Members/_SubscriptionAlert")
-        }
-    </div>
-
-    <section class="section--main">
-        <div class="container">
-            @if (Model.Breadcrumbs != null)
+    <div class="@(Model.Narrow ? "row justify-content-center" : null)">
+        <div class="@(Model.Narrow ? "col-12 col-lg-8" : null)">
+            @if (Model.Menu != null)
             {
-                @await Html.PartialAsync("Components/_Breadcrumbs", new BreadcrumbsViewModel
-                {
-                    Breadcrumbs = Model.Breadcrumbs
-                })
+                @Model.Menu
             }
+
+            <div class="container page-alerts">
+                @if (!Model.HideSubscriptionAlert)
+                {
+                    @await Html.PartialAsync("Members/_SubscriptionAlert")
+                }
+            </div>
+
+            <section class="section--main">
+                <div class="container">
+                    @if (Model.Breadcrumbs != null)
+                    {
+                        @await Html.PartialAsync("Components/_Breadcrumbs", new BreadcrumbsViewModel
+                        {
+                            Breadcrumbs = Model.Breadcrumbs
+                        })
+                    }
             
-            @await Html.PartialAsync("Feedback/_Feedback")           
+                    @await Html.PartialAsync("Feedback/_Feedback")           
 
-            @BodyContent            
+                    @BodyContent            
 
-            @Model.Content
+                    @Model.Content
 
-            @Model.ContentFunc?.Invoke(null)
+                    @Model.ContentFunc?.Invoke(null)
+                </div>
+            </section>
         </div>
-    </section>
+    </div>
+    
 </main>
