--- a/ODK.Web.Razor/Views/Shared/Components/_BodyWithSidebar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_BodyWithSidebar.cshtml
@@ -12,46 +12,50 @@
         Title = Model.Title
     })
 
-    @if (Model.Menu != null)
-    {
-        @Model.Menu
-    }
-
-    <div class="container page-alerts">
-        @if (!Model.HideSubscriptionAlert)
-        {
-            @await Html.PartialAsync("Members/_SubscriptionAlert")
-        }
-    </div>
-
-    <section class="section--main">
-        <div class="container">
-            @if (Model.Breadcrumbs != null)
+    <div class="@(Model.Narrow ? "row justify-content-center" : null)">
+        <div class="@(Model.Narrow ? "col-12 col-lg-8" : null)">            
+            @if (Model.Menu != null)
             {
-                @await Html.PartialAsync("Components/_Breadcrumbs", new BreadcrumbsViewModel
-                {
-                    Breadcrumbs = Model.Breadcrumbs
-                })
+                @Model.Menu
             }
-            
-            @await Html.PartialAsync("Feedback/_Feedback")
 
-            <div class="row">
-                <div class="col-xl-9 col-md-8 order-2 order-md-1">
-                    @if (Model.Content != null)
-                    {
-                        @Model.Content
-                    }
-
-                    @Model.ContentFunc?.Invoke(null)
-                </div>
-                <div class="col-xl-3 col-md-4 order-1 order-md-2">
-                    @if (Model.SidebarContent != null)
-                    {
-                        @Model.SidebarContent
-                    }
-                </div>
+            <div class="container page-alerts">
+                @if (!Model.HideSubscriptionAlert)
+                {
+                    @await Html.PartialAsync("Members/_SubscriptionAlert")
+                }
             </div>
-        </div>
-    </section>
+
+            <section class="section--main">
+                <div class="container">
+                    @if (Model.Breadcrumbs != null)
+                    {
+                        @await Html.PartialAsync("Components/_Breadcrumbs", new BreadcrumbsViewModel
+                        {
+                            Breadcrumbs = Model.Breadcrumbs
+                        })
+                    }
+            
+                    @await Html.PartialAsync("Feedback/_Feedback")
+
+                    <div class="row">
+                        <div class="col-xl-9 col-md-8 order-2 order-md-1">
+                            @if (Model.Content != null)
+                            {
+                                @Model.Content
+                            }
+
+                            @Model.ContentFunc?.Invoke(null)
+                        </div>
+                        <div class="col-xl-3 col-md-4 order-1 order-md-2">
+                            @if (Model.SidebarContent != null)
+                            {
+                                @Model.SidebarContent
+                            }
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>        
+    </div>    
 </main>
