(auth): Google login

--- a/ODK.Web.Razor/Pages/Account/Pending.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Pending.cshtml
@@ -10,6 +10,7 @@
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
     Title = "Create account",
+    WidthClass = "col-12 col-lg-8 col-xl-6",
     Breadcrumbs = new []
     {
         new MenuItem { Link = $"/", Text = "Home" },
