--- a/ODK.Web.Razor/Pages/Shared/_HomeLayout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_HomeLayout.cshtml
@@ -4,6 +4,11 @@
 
 @RenderBody()
 
+@section meta
+{
+    @await RenderSectionAsync("meta", required: false)
+}
+
 @section styles
 {
     @await RenderSectionAsync("styles", required: false)
