--- a/ODK.Web.Razor/Pages/Account/Create.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Create.cshtml
@@ -1,9 +1,7 @@
 ﻿@page "/account/create"
-@using ODK.Core.Members
-@using ODK.Services.Users.ViewModels
 @using ODK.Web.Razor.Models.Account
 @using ODK.Web.Razor.Models.Components
-@model ODK.Web.Razor.Pages.Account.CreateModel
+@model CreateModel
 @{
     Layout = "_HomeLayout";
     Model.Title = "Create account";
@@ -12,19 +10,16 @@
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
     Title = "Create account",
+    WidthClass = "col-12 col-lg-8 col-xl-6",
     ContentFunc = 
-        @<div class="row">
-            <div class="col-lg-6">
-                <form method="post" action="/account/create" enctype="multipart/form-data">
-                    @Html.AntiForgeryToken()
-                    @await Html.PartialAsync("Account/_PersonalDetailsForm", new PersonalDetailsFormViewModel())
-                    @await Html.PartialAsync("Account/_LocationForm", new LocationFormViewModel
-                    {
-                        TimeZoneId = Member.DefaultTimeZoneId
-                    })
-                    <button type="submit" class="btn btn-primary">Sign up</button>
-                </form>
-            </div>
+        @<div>
+            <form method="post" action="/account/create" enctype="multipart/form-data">
+                @Html.AntiForgeryToken()
+                @await Html.PartialAsync("Account/_AccountCreateForm", new AccountCreateFormViewModel
+                {
+                    GoogleClientId = Model.GoogleClientId
+                })
+            </form>
         </div>
 })
 
@@ -37,4 +32,5 @@
 {
     @await Html.PartialAsync("Components/_ImagingScripts")
     @await Html.PartialAsync("Components/_GoogleLocationScripts")
+    <script src="~/js/odk.wizard.js" asp-append-version="true"></script>
 }
