--- a/ODK.Web.Razor/Pages/Account/Login.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Login.cshtml
@@ -1,17 +1,29 @@
 ﻿@page "/account/login"
+@using ODK.Services.Users
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Login
 @model LoginModel
+@inject IAccountViewModelService AccountViewModelService
 @{
     Layout = "_HomeLayout";
     Model.Title = "Login";
+
+    var viewModel = await AccountViewModelService.GetSiteLoginPage();
 }
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
     Title = "Login",
+    WidthClass = "col-12 col-md-8 col-lg-6 col-xl-4",
     Content = await Html.PartialAsync("Account/_SiteLoginContent", new LoginViewModel
     {
+        GoogleClientId = viewModel.GoogleClientId,
         ReturnUrl = Model.ReturnUrl
     })
 })
+
+@section scripts
+{
+    <script src="~/js/odk.google.oauth.js" asp-append-version="true"></script>
+    <script src="~/js/odk.login.js" asp-append-version="true"></script>
+}
