--- a/ODK.Web.Razor/Views/Shared/Components/_Body.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Body.cshtml
@@ -11,25 +11,26 @@
     @await Html.PartialAsync("Components/_PageTitle", new PageTitleViewModel
     {
         Content = Model.TitleContent,
-        Title = Model.Title
+        Title = Model.Title,
+        WidthClass = Model.WidthClass
     })
 
-    <div class="@(Model.Narrow ? "row justify-content-center" : null)">
-        <div class="@(Model.Narrow ? "col-12 col-lg-8" : null)">
-            @if (Model.Menu != null)
-            {
-                @Model.Menu
-            }
-
-            <div class="container page-alerts">
-                @if (!Model.HideSubscriptionAlert)
+    <div class="container">
+        <div class="row @(Model.WidthClass != null ? "justify-content-center" : null)">
+            <div class="@(Model.WidthClass ?? "col-12")">
+                @if (Model.Menu != null)
                 {
-                    @await Html.PartialAsync("Members/_SubscriptionAlert")
+                    @Model.Menu
                 }
-            </div>
 
-            <section class="section--main">
-                <div class="container">
+                <div class="page-alerts">
+                    @if (!Model.HideSubscriptionAlert)
+                    {
+                        @await Html.PartialAsync("Members/_SubscriptionAlert")
+                    }
+                </div>
+
+                <section class="section--main">
                     @if (Model.Breadcrumbs != null)
                     {
                         @await Html.PartialAsync("Components/_Breadcrumbs", new BreadcrumbsViewModel
@@ -37,17 +38,16 @@
                             Breadcrumbs = Model.Breadcrumbs
                         })
                     }
-            
-                    @await Html.PartialAsync("Feedback/_Feedback")           
 
-                    @BodyContent            
+                    @await Html.PartialAsync("Feedback/_Feedback")
+
+                    @BodyContent
 
                     @Model.Content
 
                     @Model.ContentFunc?.Invoke(null)
-                </div>
-            </section>
+                </section>
+            </div>
         </div>
-    </div>
-    
+    </div>        
 </main>
