--- a/ODK.Web.Razor/wwwroot/css/build.scss
+++ b/ODK.Web.Razor/wwwroot/css/build.scss
@@ -22,6 +22,7 @@
 @import "_elements";
 @import "_footer";
 @import "_forms";
+@import "_google";
 @import "_header";
 @import "_icons";
 @import "_lists";
