--- a/ODK.Web.Razor/wwwroot/css/odk.css
+++ b/ODK.Web.Razor/wwwroot/css/odk.css
@@ -12234,6 +12234,12 @@ html[data-platform=odk] {
   font-style: normal;
 }
 
+.google-icon {
+  display: block;
+  height: 18px;
+  width: 18px;
+}
+
 :root {
   --bg-section-header: #FF0000;
   --color-section-header: #FFF;
